fix: add overflow-y to help.css (remove from style.css)

--- a/style.css
+++ b/style.css
@@ -178,7 +178,6 @@ a {
 
 .main-content {
     margin-top: 96px;
-    overflow-y: auto;
 }
 
 .header__user-menu {
