--- a/styles/help.css
+++ b/styles/help.css
@@ -1,3 +1,7 @@
+.main-content {
+    overflow-y: auto;
+}
+
 .help {
     padding: 0 64px;
 }
